22-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.2.2. (Fixes in settings
 panel).

 * clarin-angular/src/app/app.component.ts:
 * clarin-angular/src/app/ng-matero/theme/admin-layout/admin-layout.component.html:
 * clarin-angular/src/app/ng-matero/theme/customizer/customizer.component.html:
 * clarin-angular/src/app/ng-matero/theme/customizer/customizer.component.scss:
 * clarin-angular/src/app/ng-matero/theme/customizer/customizer.component.ts:
 Fixed a bug reported by UMIL/VAST, regarding the settings panel. Updated to
 more recent ng-matero code.

 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.html:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.ts:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.srevice.ts:
 Changes to the dashboard (provides details in four groups).

 * backend-django/clarin_backend/views.py: Added more information for user
 statistics.

21-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.2.1. (More detailed
 Dashboard).

 * backend-django/clarin_backend/views.py: Added a more detailed response of
 user statistics.

 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.html:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.ts:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.srevice.ts:
 Changes to the dashboard (provides details in three groups).

13-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.2.0. (Supports VAST
 login).

 * clarin-angular/src/app/components/views/login-social/:
 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/app.component.ts:
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/components/views/login/login.component.html: